Fixed headers not wrapping into new line on mobile

--- a/main/static/main.css
+++ b/main/static/main.css
@@ -17,6 +17,7 @@ h1 {
 h2 {
     font-size: 26px;
     margin-bottom: 20px;
+    overflow-wrap: break-word;
 }
 
 .project {
